{
    "name": "InputActions_GLUBall",
    "maps": [
        {
            "name": "Default",
            "id": "8ffb6d1a-a5c3-4af0-9127-14c4621bed5e",
            "actions": [
                {
                    "name": "Movement",
                    "type": "Value",
                    "id": "0a4e934e-31ef-4eee-a200-46d2e351c042",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "Jump",
                    "type": "Button",
                    "id": "a80a6565-0dac-48b7-b733-9c70f6f22a6b",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "8ff66953-fd5e-4484-a7f2-4670beae5181",
                    "path": "<Keyboard>/space",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard",
                    "action": "Jump",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "Arrow Keys",
                    "id": "7c67a13d-69bc-408b-b8dc-4110c0ad39db",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "f8fdd33a-31f9-499b-9809-6fa075b14ca3",
                    "path": "<Keyboard>/upArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "ace9d1ad-c347-41d5-9c28-b5ba77dfde62",
                    "path": "<Keyboard>/downArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "e5915f44-4b1e-4e57-846c-94ee3bab7ef7",
                    "path": "<Keyboard>/leftArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "058649f1-1565-4417-9e1b-da49ed01c7ac",
                    "path": "<Keyboard>/rightArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "WASD",
                    "id": "224f9190-7ba0-4d2e-a9af-4905987ba3a8",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "afd83edf-b2cc-42f4-b13b-1b3a6e12fbed",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "45b73a27-5f0a-40c0-9884-502fb270746c",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "3b4191a7-467b-432b-9b01-90cc37c06229",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "5f52d71b-9b45-4085-b3fe-449e80c0e7a8",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                }
            ]
        },
        {
            "name": "Camera",
            "id": "25f505dc-0b04-441a-bdd8-9d1eaaaf82c3",
            "actions": [
                {
                    "name": "StartRotating",
                    "type": "Button",
                    "id": "d42aff56-af68-4086-a522-80401869f2c5",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "Press",
                    "initialStateCheck": false
                },
                {
                    "name": "StopRotating",
                    "type": "Button",
                    "id": "5d8853a7-d4b8-4fea-8086-08988aea3397",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "Press(behavior=1)",
                    "initialStateCheck": false
                },
                {
                    "name": "Rotate",
                    "type": "Value",
                    "id": "8e3cdffe-fb64-49b5-b284-cbf464578026",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "127cdd1f-9d96-4224-8da0-93b1d43ede20",
                    "path": "<Mouse>/rightButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard",
                    "action": "StartRotating",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "2e404a08-4379-4c35-ac9c-96014b6d852b",
                    "path": "<Mouse>/rightButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard",
                    "action": "StopRotating",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "38cea433-2e78-4a0f-b336-5cd47e58dfa4",
                    "path": "<Pointer>/delta",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard",
                    "action": "Rotate",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": [
        {
            "name": "Keyboard",
            "bindingGroup": "Keyboard",
            "devices": [
                {
                    "devicePath": "<Keyboard>",
                    "isOptional": false,
                    "isOR": false
                }
            ]
        }
    ]
}